[tool.poetry]
name = "dagster-test"
version = "0.1.0"
description = "Dagster Test"
authors = ["CSW191 <joshua.parep@mt.gov>"]  # Complete the email
license = "MIT"
readme = "README.md"
 
[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dagster = ">=1.11.5,<2.0.0"
dbt-snowflake = ">=1.10.0,<2.0.0"
dotenv = ">=0.9.9,<0.10.0"
python-dotenv = ">=1.1.1,<2.0.0"
dagster-dbt = ">=0.27.5,<0.28.0"
pydantic = ">=2.11.7,<3.0.0"
dagster-webserver = ">=1.11.5,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
 
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.dagster]
module_name = "hhs_platform.definitions"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
